modules/private-vpc/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    local.tags,
    {
      Name = "vpc-${var.region}-${var.environment}"
    }
  )
}
